Fixed width table (wraps text)
Fixes #15

--- a/source/stylus/partials/tables.styl
+++ b/source/stylus/partials/tables.styl
@@ -1,5 +1,9 @@
+// Notes =======================================================================
+// #1: https://bit.ly/2AdEbVH (you can set `col` or `th` widths individually)
+
 table
-  width: 100%;
+  width: 100%
+  table-layout: fixed
   empty-cells: show
 
 th,
